add get listings api
