# backend/src/app.js
@@ -9,6 +9,7 @@ const OpenApiValidator = require('express-openapi-validator');
 const dummy = require('./dummy');
 const userRouter = require('./routes/user');
 const categoryRouter = require('./routes/category');
+const listingRouter = require('./routes/listing');
 
 const app = express();
 app.use(cors());
@@ -31,6 +32,7 @@ app.use(
 app.get('/v0/dummy', dummy.get);
 app.use('/v0/users', userRouter);
 app.use('/v0/categories', categoryRouter);
+app.use('/v0/listings', listingRouter);
 // Your routes go here
 
 app.use((err, req, res, next) => {
